# open-simulation-interface

./: CMakeLists.txt  README.md  osi_common.proto  osi_detectedobject.proto  osi_groundtruth.proto  osi_object.proto  osi_trafficupdate.proto
.github/: spelling_custom_words_en_US.txt
doxygen/: CMakeLists.txt  doxygen_config.cmake.in
